<resources>
    <string name="app_name">App Event</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_description">Image Description</string>
    <string name="buka_link_event">Buka Link Event</string>
    <string name="completed_events">Completed</string>
    <string name="error_message_here">Error message here</string>
    <string name="active_events">Active Events</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="recommendation_event_for_you">Recommendation event for you!</string>
    <string name="home">Home</string>
    <string name="upcoming_events">Upcoming</string>
    <string name="past_events">Past</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_event">Favorite Event</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="daily_reminder">Daily Reminder</string>
</resources>