<!-- res/layout/fragment_settings.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="48sp"
        android:gravity="center"
        android:padding="8dp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_dark_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_reminder" />
</LinearLayout>
